--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -15,12 +15,12 @@ builds:
       - windows
       - darwin
 archives:
-  - format: gz
+  - format: binary
   - files:
     - none*
   - name_template: "extract_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
 checksum:
-  name_template: 'checksums.txt'
+  disable: true
 snapshot:
   name_template: "{{ .Tag }}-next"
 changelog:
